--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <a href="#" class="logo">Ron<span>d</span>'s.</a>
     <ul class="navlist">
       <li><a href="#home" class="active">Home</a></li>
-      <li><a href="#about">About Me</a></li>
+      <li><a href="#about">About</a></li>
       <li><a href="#reason">Reason</a></li>
       <li><a href="#galery">Galery</a></li>
-      <li><a href="#contact">Contact Me</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
     <div class="bx bx-menu" id="menu-icon">
     </div>
@@ -51,7 +51,7 @@
       <h4>Mahasiswa STMIK Palangkaraya</h4>
       <p>Perkenalkan nama saya Ronaldo Dwi Anaku Aminu saya dari Prodi Sistem Informasi
         dengan NIM C2057201032, saya alumni dari SMA Negri 1 Dusun Selatan, pada saat ini saya
-        sedang memasuki akhir semester 5 dan website ini merupakan UAS dari mata kuliah
+        sedang memasuki akhir semester 5 dan website ini merupakan project UAS dari mata kuliah
         Pemrograman Berbasis Perangkat Bergerak Mobile, yang
         dimana saya memilih untuk membuat website statis responsive sebagai UAS saya.
         <br>
@@ -75,7 +75,7 @@
         <h3>WEBSITE</h3>
         <p>Karena membuat website memungkinkan saya untuk menyebarkan informasi ke seluruh dunia
           dengan mudah, sedangkan desain interface biasanya hanya terbatas pada sebuah aplikasi
-          atau perangkat tertentu dan saya lebih menyukai membuat website daripada merancang
+          atau perangkat tertentu dan selain itu saya lebih menyukai membuat website daripada merancang
           antarmuka.
         </p>
         <a href="https://id.wikipedia.org/wiki/Situs_web" class="read">Read More</a>
@@ -89,7 +89,7 @@
         <p>Karena kinerja Website statis lebih cepat jika dibandingkan dengan website dinamis karena tidak
           memerlukan banyak pemrosesan yang rumit di belakang layar dan Keamanan Website statis juga
           lebih aman dibandingkan website dinamis karena tidak memiliki script atau kode yang dapat
-          dieksploitasi oleh hacker.</p>
+          di injeksi oleh hacker.</p>
         <a href="https://www.jagoanhosting.com/blog/website-statis/#:~:text=Apa%20itu%20Website%20Statis%3F%20Secara%20sederhana%2C%20website%20statis,di%20mana%20setiap%20halaman%20memiliki%20HTML%20yang%20terpisah."
           class="read">Read More</a>
       </div>
@@ -98,7 +98,7 @@
         <div class="r-icons">
           <i class='bx bx-edit-alt'></i>
         </div>
-        <h3>TOPIK</h3>
+        <h3>TEMA</h3>
         <p>Agar dapat menambah wawasan kita tentang keajaiban karena dapat membantu kita merasa
           terhubung dengan alam dan dunia di sekitar kita. Ini juga dapat membantu kita memahami bagaimana
           sesuatu bekerja atau terjadi, yang dapat meningkatkan rasa takjub dan kekaguman kita terhadap dunia.</p>
